complete header with responsive

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           </li>
         </ul>
       </nav>
+      <button class="site-header__burger"></button>
     </div>
   </header>
 
@@ -59,5 +60,6 @@
 
   </main>
   
+  <script src="./assets/js/main.js"></script>
 </body>
 </html>
