complate footer with responsive

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
-  <link rel="stylesheet" href="assets/scss/styles.css">
+    <link rel="stylesheet" href="assets/scss/styles.css">
 </head>
 <body>
 
@@ -111,8 +111,22 @@
   </main>
 
 
-  <footer>
-    <h1 class="visually-hidden">Footer section</h1>
+  <footer class="site-footer">
+    <div class="site-footer__container">
+      <h1 class="visually-hidden">Footer section</h1>
+      <div class="site-footer__left">
+        <p class="site-footer__location">LOCATION</p>
+        <p class="site-footer__address">Uzbekistan, Tashkent</p>
+        <a href="#contacts" class="site-footer__btn btn">Get in Touch</a>
+      </div>
+      <div class="site-footer__right">
+        <a class="site-footer__links site-footer__phone" href="tel:+998977690260">+998 97 769-02-60</a>
+        <a class="site-footer__links site-footer__gmail" href="mailto:sanjarabduxamidov@gmail.com">sanjarabduxamidov@gmail.com</a>
+        <a class="site-footer__links site-footer__telegram" href="https://telegram.me/Sanjar1311" target="_blank">Telegram</a>
+        <a class="site-footer__links site-footer__facebook" href ="http://www.facebook.com" target="_blank">Facebook</a> 
+      </div>
+    </div>
+    <p class="site-footer__bottom">© 2021 Sanjar Abuxamidov. All rights reserved.</p>
   </footer>
   
   <script src="./assets/js/main.js"></script>
