--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
       </div>
     </div>
     <p class="site-footer__bottom">© 2021 Sanjar Abuxamidov. All rights reserved.</p>
+
+    <a class="site-footer__arrow-up" href="#">
+      <img src="./assets/images/arrow-up.svg" alt="">
+    </a>
   </footer>
   
   <script src="./assets/js/main.js"></script>
