change projects href

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="hero__wrapper-left hero-left">
           <h1 class="hero-left__heading">Hi, I'm Sanjar</h1>
           <p class="hero-left__text">A web developer from Tashkent in the Uzbekistan. I create bespoke websites to help people go further online.</p>
-          <a href="#" class="hero-left__btn btn">My Projects</a>
+          <a href="#projects" class="hero-left__btn btn">My Projects</a>
         </div>
 
         <div class="hero__wrapper-right hero-right">
