--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <a class="site-header__logo" href="#">Portfolio</a>
       <nav class="nav">
         <ul class="nav__list">
-          <li class="nav__item">
-            <a class="nav__link nav__link--active" href="#">Home</a>
+          <li class="nav__item active">
+            <a class="nav__link" href="#">Home</a>
           </li>
           <li class="nav__item">
             <a class="nav__link" href="#projects">Projects</a>
@@ -55,42 +55,79 @@
     <div class="projects" id="projects">
       <h1 class="projects__title">My Projects</h1>
       <ul class="projects__list">
+
         <li class="projects__item">
-          <a href="#" class="projects__link">
-            <img src="https://picsum.photos/id/614/360/360" alt="project" class="projects__img">
-            <p class="projects__img-title">Kinolar sayti</p>
-          </a>
+          <img src="./assets/images/stroy-control.png" alt="project" class="projects__img">
+          <div class="projects__item-center">
+            <p>HTML, Scss, Js</p>
+            <p>Строй Контроль</p>
+          </div>
+          <div class="projects__item-bottom">
+            <a class="projects__link" href="https://stroy-kontrol-sanjar.netlify.app" class="projects__img-title" target="_blank">View site</a>
+            <a class="projects__link" href="https://github.com/sanjar1311/stroy-kontrol" target="_blank">Github</a>
+          </div>
         </li>
+
         <li class="projects__item">
-          <a href="#" class="projects__link">
-            <img src="https://picsum.photos/id/554/360/360" alt="project" class="projects__img">
-            <p class="projects__img-title">Kinolar sayti</p>
-          </a>
+          <img src="./assets/images/tmdb.png" alt="project" class="projects__img">
+          <div class="projects__item-center">
+            <p>React</p>
+            <p>TMDB movies</p>
+          </div>
+          <div class="projects__item-bottom">
+            <a class="projects__link" href="https://rmdbmoviesuz.netlify.app" class="projects__img-title" target="_blank">View site</a>
+            <a class="projects__link" href="https://github.com/sanjar1311/tmdbmovies" target="_blank">Github</a>
+          </div>
         </li>
+
         <li class="projects__item">
-          <a href="#" class="projects__link">
-            <img src="https://picsum.photos/id/694/360/360" alt="project" class="projects__img">
-            <p class="projects__img-title">Kinolar sayti</p>
-          </a>
+          <img src="./assets/images/filter.png" alt="project" class="projects__img">
+          <div class="projects__item-center">
+            <p>HTML, Css, Js</p>
+            <p>Grandma</p>
+          </div>
+          <div class="projects__item-bottom">
+            <a class="projects__link" href="https://filter-project-cackes.netlify.app" class="projects__img-title" target="_blank">View site</a>
+            <a class="projects__link" href="https://github.com/sanjar1311/p-8--filter-project" target="_blank">Github</a>
+          </div>
         </li>
+
         <li class="projects__item">
-          <a href="#" class="projects__link">
-            <img src="https://picsum.photos/id/154/360/360" alt="project" class="projects__img">
-            <p class="projects__img-title">Kinolar sayti</p>
-          </a>
+          <img src="./assets/images/myteab.png" alt="project" class="projects__img">
+          <div class="projects__item-center">
+            <p>HTML, Scss, Js</p>
+            <p>TMDB movies</p>
+          </div>
+          <div class="projects__item-bottom">
+            <a class="projects__link" href="https://myteam-sanjar.netlify.app" class="projects__img-title" target="_blank">View site</a>
+            <a class="projects__link" href="https://github.com/sanjar1311/myteam" target="_blank">Github</a>
+          </div>
         </li>
+
         <li class="projects__item">
-          <a href="#" class="projects__link">
-            <img src="https://picsum.photos/id/677/360/360" alt="project" class="projects__img">
-            <p class="projects__img-title">Kinolar sayti</p>
-          </a>
+          <img src="./assets/images/dental.png" alt="project" class="projects__img">
+          <div class="projects__item-center">
+            <p>HTML, Scss, Js</p>
+            <p>Dental Practice</p>
+          </div>
+          <div class="projects__item-bottom">
+            <a class="projects__link" href="https://dental-practice-sanjar.netlify.app" class="projects__img-title" target="_blank">View site</a>
+            <a class="projects__link" href="https://github.com/sanjar1311/dental-practic" target="_blank">Github</a>
+          </div>
         </li>
+
         <li class="projects__item">
-          <a href="#" class="projects__link">
-            <img src="https://picsum.photos/id/674/360/360" alt="project" class="projects__img">
-            <p class="projects__img-title">Kinolar sayti</p>
-          </a>
+          <img src="./assets/images/fylo.png" alt="project" class="projects__img">
+          <div class="projects__item-center">
+            <p>HTML, Scss, Js</p>
+            <p>Fylo</p>
+          </div>
+          <div class="projects__item-bottom">
+            <a class="projects__link" href="https://fylo-sanjar.netlify.app" class="projects__img-title" target="_blank">View site</a>
+            <a class="projects__link" href="https://github.com/sanjar1311/fylo" target="_blank">Github</a>
+          </div>
         </li>
+
       </ul>
     </div>
 
