--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <div class="hero__wrapper-left hero-left">
           <h1 class="hero-left__heading">Hi, I'm Sanjar</h1>
-          <p class="hero-left__text">A web developer from Tashkent in the Uzbekistan. I create bespoke websites to help people go further online.</p>
+          <p class="hero-left__text">I'm a Front-end Developer</p>
           <a href="#projects" class="hero-left__btn btn">My Projects</a>
         </div>
 
