add novigation on scroll

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
   <header class="site-header">
     <h1 class="visually-hidden">Site header</h1>
-    <div class="site-header__container">
+    <div class="site-header__container" >
       <a class="site-header__logo" href="#">Portfolio</a>
-      <nav class="nav">
+      <nav class="nav" >
         <ul class="nav__list">
-          <li class="nav__item active">
-            <a class="nav__link" href="#">Home</a>
+          <li class="nav__item">
+            <a class="nav__link active" href="#home">Home</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#projects">Projects</a>
+            <a class="nav__link " href="#projects">Projects</a>
           </li>
           <li class="nav__item">
             <a class="nav__link" href="#contacts">Contacts</a>
@@ -30,9 +30,9 @@
     </div>
   </header>
 
-  <main>
+  <main >
     <h1 class="visually-hidden">Main Section</h1>
-    <div class="hero">
+    <div class="hero" id="home">
       <h2 class="visually-hidden">Hero secton</h2>
       <div class="container hero__wrapper">
 
@@ -158,14 +158,14 @@
       </div>
       <div class="site-footer__right">
         <a class="site-footer__links site-footer__phone" href="tel:+998977690260">+998 97 769-02-60</a>
-        <a class="site-footer__links site-footer__gmail" href="mailto:sanjarabduxamidov@gmail.com">sanjarabduxamidov@gmail.com</a>
+        <a class="site-footer__links site-footer__gmail" href="mailto:sanjarabduxamidov@gmail.com">sanjarabduxamidov1311@gmail.com</a>
         <a class="site-footer__links site-footer__telegram" href="https://telegram.me/Sanjar1311" target="_blank">Telegram</a>
         <a class="site-footer__links site-footer__facebook" href ="http://www.facebook.com" target="_blank">Facebook</a> 
       </div>
     </div>
     <p class="site-footer__bottom">© 2021 Sanjar Abuxamidov. All rights reserved.</p>
 
-    <a class="site-footer__arrow-up" href="#">
+    <a class="site-footer__arrow-up" href="#home">
       <img src="./assets/images/arrow-up.svg" alt="">
     </a>
   </footer>
