change project title

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <img src="./assets/images/myteab.png" alt="project" class="projects__img">
           <div class="projects__item-center">
             <p>HTML, Scss, Js</p>
-            <p>TMDB movies</p>
+            <p>My-team</p>
           </div>
           <div class="projects__item-bottom">
             <a class="projects__link" href="https://myteam-sanjar.netlify.app" class="projects__img-title" target="_blank">View site</a>
