change gmail link

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       </div>
       <div class="site-footer__right">
         <a class="site-footer__links site-footer__phone" href="tel:+998977690260">+998 97 769-02-60</a>
-        <a class="site-footer__links site-footer__gmail" href="mailto:sanjarabduxamidov@gmail.com">sanjarabduxamidov1311@gmail.com</a>
+        <a class="site-footer__links site-footer__gmail" href="mailto:sanjarabduxamidov@gmail.com">Gmail</a>
         <a class="site-footer__links site-footer__telegram" href="https://telegram.me/Sanjar1311" target="_blank">Telegram</a>
         <a class="site-footer__links site-footer__facebook" href ="http://www.facebook.com" target="_blank">Facebook</a> 
       </div>
