change contacts sections design

--- a/index.html
+++ b/index.html
@@ -169,6 +169,24 @@
       <img src="./assets/images/arrow-up.svg" alt="">
     </a>
   </footer>
+
+
+  <!--  T E M P L A T E   -->
+
+  <!-- <template class="projects-item-template">
+    <li class="projects__item">
+      <img src="./assets/images/stroy-control.png" alt="project" class="projects__img">
+      <div class="projects__item-center">
+        <p>HTML, Scss, Js</p>
+        <p class="projects__item-title">Строй Контроль</p>
+      </div>
+      <div class="projects__item-bottom">
+        <a class="projects__link" href="https://stroy-kontrol-sanjar.netlify.app" class="projects__img-title" target="_blank">View site</a>
+        <a class="projects__link" href="https://github.com/sanjar1311/stroy-kontrol" target="_blank">Github</a>
+      </div>
+    </li>
+  </template> -->
+
   
   <script src="./assets/js/main.js"></script>
 </body>
