add style to projects form and btns

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
       </div>
       <form class="projects__form" action="https://echo.htmlacademy.ru" method="POST" autocomplete="off">
         <input class="projects__input" type="text" name="lang" placeholder="html, css, js, react..." required>
-        <button class="projects__search-btn">Search</button>
+        <button class="projects__search-btn">
+          <img src="./assets//images/search.svg" width="27" height="27" alt="">
+        </button>
       </form>
       <ul class="projects__list"></ul>
     </div>
