--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
     <p class="site-footer__bottom">© 2021 Sanjar Abuxamidov. All rights reserved.</p>
 
-    <a class="site-footer__arrow-up" href="#home">
+    <a class="site-footer__arrow-up" href="#">
       <img src="./assets/images/arrow-up.svg" alt="">
     </a>
   </footer>
