fix projects lang

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <li class="projects__item">
       <img src="./assets/images/stroy-control.png" alt="project" class="projects__img">
       <div class="projects__item-center">
-        <p class="projects__langs">HTML, Scss, Js</p>
+        <p class="projects__langs"></p>
         <p class="projects__item-title">Строй Контроль</p>
       </div>
       <div class="projects__item-bottom">
